# scupa

./: CMakeLists.txt  README.md
include/lacu/: helpers.cpp  helpers.hpp
include/mazzu/: Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  Suit.hpp
src/: Hand.cpp  Hand.hpp  main.cpp
tests/: test.cpp
